Salesforce/main/default/objects/SiteUserSession__c/fields/Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Close_Time__c</fullName>
    <label>Close Time</label>
    <type>DateTime</type>
</CustomField>