Salesforce/main/default/objects/SiteUserSession__c/fields/Valid_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Valid_Date_Time__c</fullName>
    <formula>LastModifiedDate + 1/24</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Date Time</label>
    <type>DateTime</type>
</CustomField>