Salesforce/main/default/objects/SiteUserSession__c/fields/Valid_Session__c.field-meta.xml
<CustomField>
    <fullName>Valid_Session__c</fullName>
    <formula>AND(NOW() &lt;= Valid_Date_Time__c, isnull(Close_Time__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid Session</label>
    <type>Checkbox</type>
</CustomField>